--- a/index.html
+++ b/index.html
@@ -8,12 +8,63 @@
         
         <link rel="shortcut icon" href="./assets/imgs/favicon.ico" type="image/x-icon">
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous" defer></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous" defer></script>        <!-- Font Awesome -->
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/882bb34580.js" crossorigin="anonymous" defer></script>
     </head>
     <body>
-        <h1>Olá</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <a href="#" class="navbar-brand">
+                <i class="fa-sharp fa-solid fa-child-reaching fa-2x text-warning"></i>
+            </a>
+            <button 
+                type="button" 
+                class="navbar-toggler bg-light"
+                data-toggle="collapse"
+                data-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Skills</a></li>
+                    <li class="nav-item dropdown" >
+                        <a 
+                            href="#" 
+                            class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            Projetos
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="#" class="dropdown-item">Projeto 1</a>
+                            <a href="#" class="dropdown-item">Projeto 2</a>
+                            <a href="#" class="dropdown-item">Projeto 3</a>
+                            <a href="#" class="dropdown-item">Projeto 4</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Equipe</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Contato</a></li>
+                </ul>
+                <form action="#" class="form-inline ml-3">
+                    <div class="input-group">
+                        <input type="text" placeholder="Pesquisar" class="form-control">
+                        <div class="input-group-append">
+                            <button type="button" class="input-group-text btn">
+                                <i class="fa-solid fa-magnifying-glass text-muted"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </nav>
     </body>
 </html>
