--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <script src="https://kit.fontawesome.com/882bb34580.js" crossorigin="anonymous" defer></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
             <a href="#" class="navbar-brand">
                 <i class="fa-sharp fa-solid fa-child-reaching fa-2x text-warning"></i>
             </a>
@@ -66,5 +66,21 @@
                 </form>
             </div>
         </nav>
+        <section>
+            <div class="container-fluid">
+                <div class="row bg-info justify-content-center align-items-center text-center" style="height: 100vh">
+                    <div class="col-sm-10">
+                        <h1 class="display-2 text-capitalize text-warning">
+                            <span>pure</span>
+                            <span class="text-white font-weight-bold">sites</span>
+                        </h1>
+                        <h2 class="font-weight-light font-italic text-light">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </h2>
+                        <a href="#" class="btn btn-warning btn-lg px-3 mt-3">Peça um orçamento</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
