Criada a seção de serviços

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Skills</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-light text-uppercase font-weight-bold px-3">Serviços</a></li>
                     <li class="nav-item dropdown" >
                         <a 
                             href="#" 
@@ -78,6 +78,44 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         </h2>
                         <a href="#" class="btn btn-warning btn-lg px-3 mt-3">Peça um orçamento</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-secondary p-5">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col text-center mb-5">
+                        <h2 class="text-warning display-3">Serviços</h2>
+                    </div>
+                </div>
+                <div class="row text-center mt-2">
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                        <i class="fa-solid fa-desktop fa-6x text-warning mb-3"></i>
+                        <h3 class="text-light">Desenvolvimento de sites</h3>
+                        <p class="text-light my-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet distinctio facere, optio 
+                            facilis asperiores est sint voluptatum iste aspernatur molestias.
+                        </p>
+                        <a href="#" class="btn btn-outline-warning">Saiba mais</a>
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                        <i class="fa-solid fa-pen-to-square fa-6x text-warning mb-3"></i>
+                        <h3 class="text-light">Design</h3>
+                        <p class="text-light my-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet distinctio facere, optio 
+                            facilis asperiores est sint voluptatum iste aspernatur molestias.
+                        </p>
+                        <a href="#" class="btn btn-outline-warning">Saiba mais</a>
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-5">
+                        <i class="fa-solid fa-magnifying-glass fa-6x text-warning mb-3"></i>
+                        <h3 class="text-light">SEO</h3>
+                        <p class="text-light my-4">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet distinctio facere, optio 
+                            facilis asperiores est sint voluptatum iste aspernatur molestias.
+                        </p>
+                        <a href="#" class="btn btn-outline-warning">Saiba mais</a>
                     </div>
                 </div>
             </div>
