Criada a seção de projetos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col text-center mb-5">
-                        <h2 class="text-warning display-3">Serviços</h2>
+                        <h2 class="text-warning display-4 text-uppercase">Serviços</h2>
                     </div>
                 </div>
                 <div class="row text-center mt-2">
@@ -116,6 +116,48 @@
                             facilis asperiores est sint voluptatum iste aspernatur molestias.
                         </p>
                         <a href="#" class="btn btn-outline-warning">Saiba mais</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="p-3 bg-light">
+            <div class="container-fluid">
+                <div class="row mt-4">
+                    <div class="col text-center mb-5">
+                        <h2 class="text-warning display-4 text-uppercase text-center">projetos</h2>
+                        <p class="lead text-secondary mt-3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, saepe voluptate? Error?
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-sm-6 mb-4">
+                        <img src="./assets/imgs/project1.jpg" alt="Projeto 1" class="img-thumbnail">
+                        <h3 class="text-warning my-3">Projeto Um</h3>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, perspiciatis!
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mb-4">
+                        <img src="./assets/imgs/project2.jpg" alt="Projeto 2" class="img-thumbnail">
+                        <h3 class="text-warning my-3">Projeto Dois</h3>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, perspiciatis!
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mb-4">
+                        <img src="./assets/imgs/project3.jpg" alt="Projeto 3" class="img-thumbnail">
+                        <h3 class="text-warning my-3">Projeto Três</h3>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, perspiciatis!
+                        </p>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mb-4">
+                        <img src="./assets/imgs/project4.jpg" alt="Projeto 4" class="img-thumbnail">
+                        <h3 class="text-warning my-3">Projeto Quatro</h3>
+                        <p class="text-muted">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, perspiciatis!
+                        </p>
                     </div>
                 </div>
             </div>
