Criada a seção de membros da equipe

--- a/index.html
+++ b/index.html
@@ -162,5 +162,106 @@
                 </div>
             </div>
         </section>
+        <section class="p-sm-5 p2 bg-secondary">
+            <div class="container-fluid">
+                <div class="row mt-4">
+                    <div class="col text-center mb-5">
+                        <h2 class="text-warning display-4 text-uppercase text-center">Equipe</h2>
+                        <p class="lead text-light mt-3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, saepe voluptate? Error?
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                        <div class="card">
+                            <img src="./assets/imgs/kid1.jpg" alt="Dev 1" class="card-img-top">
+                            <div class="card-body">
+                                <div class="card-title">
+                                    <h3 class="text-muted font-weight-bold">Michael</h3>
+                                </div>
+                                <div class="card-subtitle">
+                                    <p class="lead text-secondary">
+                                        Lorem ipsum dolor sit amet.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-footer text-right">
+                                <a href="#">
+                                    <i class="fa-brands fa-square-facebook fa-2x mr-2 text-primary"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-solid fa-envelope fa-2x mr-2 text-danger"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-brands fa-linkedin fa-2x mr-2 text-primary"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-brands fa-github fa-2x mr-2 text-secondary"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                        <div class="card">
+                            <img src="./assets/imgs/kid2.jpg" alt="Dev 2" class="card-img-top">
+                            <div class="card-body">
+                                <div class="card-title">
+                                    <h3 class="text-muted font-weight-bold">Jack</h3>
+                                </div>
+                                <div class="card-subtitle">
+                                    <p class="lead text-secondary">
+                                        Lorem ipsum dolor sit amet.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-footer text-right">
+                                <a href="#">
+                                    <i class="fa-brands fa-square-facebook fa-2x mr-2 text-primary"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-solid fa-envelope fa-2x mr-2 text-danger"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-brands fa-linkedin fa-2x mr-2 text-primary"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-brands fa-github fa-2x mr-2 text-secondary"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-10 mx-auto mb-4">
+                        <div class="card">
+                            <img src="./assets/imgs/kid3.jpg" alt="Dev 3" class="card-img-top">
+                            <div class="card-body">
+                                <div class="card-title">
+                                    <h3 class="text-muted font-weight-bold">Anne</h3>
+                                </div>
+                                <div class="card-subtitle">
+                                    <p class="lead text-secondary">
+                                        Lorem ipsum dolor sit amet.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-footer text-right">
+                                <a href="#">
+                                    <i class="fa-brands fa-square-facebook fa-2x mr-2 text-primary"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-solid fa-envelope fa-2x mr-2 text-danger"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-brands fa-linkedin fa-2x mr-2 text-primary"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa-brands fa-github fa-2x mr-2 text-secondary"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
