Criada a seção de progresso

--- a/index.html
+++ b/index.html
@@ -263,5 +263,46 @@
                 </div>
             </div>
         </section>
+        <section class="p-5 bg-light">
+            <div class="container-fluid">
+                <div class="row mt-4">
+                    <div class="col text-center mb-4">
+                        <h2 class="text-warning display-4 text-uppercase text-center">Progresso</h2>
+                        <p class="lead text-secondary mt-3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, saepe voluptate? Error?
+                        </p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-5 col-sm-10 text-secondary">
+                        <h3>HTML</h3>
+                        <div class="progress bg-secondary mb-4">
+                            <div class="progress-bar" style="width: 90%; background-color: #E35026;">
+                            90%</div>
+                        </div>
+                        <h3>CSS</h3>
+                        <div class="progress bg-secondary mb-4">
+                            <div class="progress-bar" style="width: 60%; background-color: #4494CF;">
+                            60%</div>
+                        </div>
+                        <h3>JavaScript</h3>
+                        <div class="progress bg-secondary mb-4">
+                            <div class="progress-bar text-dark" style="width: 50%; background-color: #F8E018;">
+                            50%</div>
+                        </div>
+                        <h3>Bootstrap</h3>
+                        <div class="progress bg-secondary mb-4">
+                            <div class="progress-bar" style="width: 50%; background-color: #9363FD;">
+                            50%</div>
+                        </div>
+                        <h3>React</h3>
+                        <div class="progress bg-secondary mb-4">
+                            <div class="progress-bar text-dark" style="width: 70%; background-color: #73DFFE;">
+                            50%</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
