Criada a seção de contato

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </section>
         <section class="p-5 bg-light">
             <div class="container-fluid">
-                <div class="row mt-4">
+                <div class="row">
                     <div class="col text-center mb-4">
                         <h2 class="text-warning display-4 text-uppercase text-center">Progresso</h2>
                         <p class="lead text-secondary mt-3">
@@ -300,6 +300,37 @@
                             <div class="progress-bar text-dark" style="width: 70%; background-color: #73DFFE;">
                             50%</div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="p-5 bg-secondary">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col text-center mb-2">
+                        <h2 class="text-warning display-4 text-uppercase text-center">Contato</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 col-md-8 col-sm-10">
+                        <div class="text-center text-light">
+                            <p class="lead">Envie já, a sua mensagem!</p>
+                        </div>
+                        <form action="#" class="text-light">
+                            <div class="form-group">
+                                <label for="name">Nome:</label>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Digite o seu nome">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail:</label>
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Digite o seu e-mail">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Mensagem:</label>
+                                <textarea class="form-control" name="message" id="message" rows="5" placeholder="Nos escreva algo..."></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-outline-warning btn-block">Enviar</button>
+                        </form>
                     </div>
                 </div>
             </div>
