Criado o rodapé da página

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pure</title>
+        <title>PureSites</title>
         
         <link rel="shortcut icon" href="./assets/imgs/favicon.ico" type="image/x-icon">
         <!-- Bootstrap -->
@@ -335,5 +335,31 @@
                 </div>
             </div>
         </section>
+        <footer class="bg-info">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-light text-center">
+                        <h4 class=" font-weight-bold text-capitalize pt-5">pure sites</h4>
+                        <p class="font-italic">
+                            Lorem ipsum dolor sit amet.
+                        </p>
+                        <div class="py-2">
+                            <a href="#" class="text-light mx-3">
+                                <i class="fa-brands fa-square-facebook fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light mx-3">
+                                <i class="fa-brands fa-instagram fa-2x"></i>
+                            </a>
+                            <a href="#" class="text-light mx-3">
+                                <i class="fa-brands fa-twitter fa-2x"></i>
+                            </a>
+                        </div>
+                        <p class="py-3">
+                            &copy; Copyright 2022 - PureSites
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
